--- a/style.css
+++ b/style.css
@@ -24,3 +24,28 @@ body {
     text-align: center;
     padding: 0 20px;
   }
+  /* header-section */
+  h1 {
+    margin: 35px 0 25px 0;
+  }
+  .photo {
+    width: 300px;
+    margin: 0 0 15px 0;
+  }
+  /* main-section */
+  .skills {
+    padding: 0;
+    margin: 0 0 15px 0;
+    list-style: square;
+    text-decoration: underline;
+  }
+  /* footer-section */
+  .contacts {
+    margin: 0 0 15px 0;
+  }
+  .link {
+    text-decoration: none;
+    color: rgb(99, 131, 192);
+    font-size: 120%;
+  }
+  
